--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,17 @@
 @import "tailwindcss";
+
+@theme {
+    --animate-wiggle: wiggle 500ms alternate infinite;
+
+    @keyframes wiggle {
+
+        0% {
+            transform: rotate(-2deg);
+        }
+
+        100% {
+            transform: rotate(2deg);
+        }
+        
+    }
+}
